Fix docker running issue for java 21