@@ -31,4 +31,4 @@ COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
 
 # The command to run the application when the container starts
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
